--- a/odoo/custom_addons/app_one/reports/property_report.xml
+++ b/odoo/custom_addons/app_one/reports/property_report.xml
@@ -14,7 +14,7 @@
         <t t-call="web.html_container">
             <t t-call="web.external_layout">
                 <t t-foreach="docs" t-as="o">
-                    <h1 style="text-align: center;">Property Report</h1>
+                    <h1 style="font-family: 'Workbench';">Property Report</h1>
                     <style>
                         table {
                             width: 100%;
